# idempotent-payment-processing-system

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  extensions.txt  prometheus.yml  pyproject.toml  repo-structure.txt
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py
app/core/: database.py  exceptions.py  http_client.py  kafka_client.py  logging.py  metrics.py  redis_client.py
app/models/: __init__.py  outbox_event.py  payment.py  processed_event.py
app/routers/: health.py  payments.py  webhooks.py
app/schemas/: payment.py
app/services/: idempotency.py  outbox_poller.py  payment_service.py  state_machine.py
app/workers/: outbox_poller.py  settlement_worker.py
migrations/: env.py
migrations/versions/: f7355da969c5_initial_tables.py
mock_provider/: Dockerfile  main.py
tests/: conftest.py
tests/integration/: test_idempotency.py  test_payment_flow.py
tests/load/: locustfile.py
tests/load/scenarios/: legitimate_user.py
tests/unit/: test_config.py  test_exceptions.py  test_idempotency.py  test_models.py  test_outbox_poller_service.py  test_payment_flow.py  test_payment_service.py  test_routers.py  test_settlement_worker.py  test_state_machine.py
